fix uneven gutter size in thread panel

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -21,7 +21,7 @@ limitations under the License.
     overflow: visible;
 
     &.mx_BaseCard {
-        padding-right: 0;
+        padding-right: 2px;
     }
 
     .mx_BaseCard_header {
